----------
v4.2.2-git
----------

[jan] Fix listing group members that contain colons in their IDs.


------
v4.2.1
------

[jan] Display correct address books in WebDAV folders.
[jan] Fix displayed CardDAV URLs for shared address books (Bug #12380).
[mms] Only include e-mail addresses that match the search string in the return
      from the search() API call (Request #12480).
[mjr] Fix exporting tags via vCard and ActiveSync (Bug #13393).
[mjr] Add EAS client created shares to the sync_books preference (Bug #13359).
[mjr] Add missing API support for searchTags API (Bug #13362).
[mjr] Fix issue that caused contacts to be tagged with a broken username.


------
v4.2.0
------

[jan] Fix fatal error if importing CSV data with date fields.


---------
v4.2.0RC2
---------

[mjr] Fix another regression with exporting photos in vCard when we are
      ignoring empty values.


---------
v4.2.0RC1
---------

[mjr] Fix regression with exporting photos in vCard when we are ignoring empty
      values.
[jan] Update Polish translation (Maciej Uhlig <maciej.uhlig@us.edu.pl>).
[jan] Update Japanese translation (Hiromi Kimura <hiromi@tac.tsukuba.ac.jp>).


-----------
v4.2.0beta1
-----------

[jan] Export composite attributes to vCard too.


------------
v4.2.0alpha1
------------

[jan] Don't export binary fields to CSV/TSV.
[mms] Fix search in Facebook driver.
[jan] Add script to import contacts from Open-Xchange.
[jan] Don't remove missing contacts from distributions lists in Kolab backends
      (Bug #12861).
[jan] Support binary fields (photos) in Kolab backends.
[mjr] Fix importing certain vCards to sources only using the 'email' attribute
      (Bug #12955).
[jan] Make shares table compatible with Oracle.
[jan] Export free/busy URL to vCard (Request #12915).
[mjr] Fix listTimeObjects API when format_in attribute parameter is changed
      from default (Bug #11891).
[mjr] Add API support for supporting multiple addressbooks via ActiveSync.